katars/tests/snaps/snapshots/snap_errors__generic_method_type_error.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let a = [1, 2, 3]\\na.push(\\\"wrong\\\")\")"
---
Error: type mismatch: expected Int, got Str
   ╭─[<test>:2:8]
   │
 2 │ a.push("wrong")
   │        ───┬───  
   │           ╰───── type mismatch: expected Int, got Str
───╯
